[gd_scene load_steps=4 format=3 uid="uid://cpausemenu123"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_pause"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.04, 0.08, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.5, 0.3, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.12, 0.1, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_pause")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.15, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 42
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Resume"

[node name="SaveButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Save Game"

[node name="OptionsButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Options"

[node name="MainMenuButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.5, 0.5, 1)
theme_override_colors/font_hover_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Exit to Main Menu"
